--- a/projeto_teste/nginx/default.conf
+++ b/projeto_teste/nginx/default.conf
@@ -2,7 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/public;
+    root /var/www/html/public;  # Diretório onde está o Laravel
+
     index index.php index.html index.htm;
 
     location / {
@@ -10,9 +11,9 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www$fastcgi_script_name;
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass php:9000;  # Este é o contêiner PHP
+        fastcgi_param SCRIPT_FILENAME /var/www/html/public$fastcgi_script_name;
         include fastcgi_params;
     }
 
