--- a/projeto_teste/docker-compose.yml
+++ b/projeto_teste/docker-compose.yml
@@ -1,23 +1,23 @@
-version: '3.8'
+version: '3.7'
 
 services:
   app:
     image: php:8.0-fpm
-    container_name: app
-    working_dir: /var/www
+    container_name: projeto_teste_app
+    working_dir: /var/www/html
     volumes:
-      - ./app:/var/www
+      - .:/var/www/html
     networks:
       - laravel
 
   nginx:
     image: nginx:alpine
-    container_name: nginx
+    container_name: projeto_teste_nginx
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./app:/var/www
+      - .:/var/www/html
+      - ./nginx.conf:/etc/nginx/nginx.conf  # Certifique-se de que o arquivo de configuração do Nginx está correto
     depends_on:
       - app
     networks:
